[package]
name = "eth-utils"
version = "0.3.3"
authors = []
edition = "2021"
license = "MIT"
description = "..."
homepage = "https://github.com/Overealityio/eth-utils"
repository = "https://github.com/Overealityio/eth-utils.git"
keywords = ["eth", "evm", "ecdsa"]
categories = ["data-structures", "algorithms"]

[dependencies]
ruc = "1.0.5"
rand = "0.8.5"
byteorder = "1.4.3"
serde = { version = "1.0.136", features = ["derive"] }

bip32 = "0.3.0"
bip0039 = "0.10.1"

hex = "0.4.3"
base64 = "0.13.0"

sha3 = "0.10.1"
twox-hash = "1.6.0"
blake2-rfc = "0.2.18"
tiny-keccak = { version = "2.0", features = ["keccak"] }
libsecp256k1 = { version = "0.7.0", features = ["static-context", "hmac"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["rlp", "byteorder", "serde"] }

ovr-evm-precompile-simple = { version = "2.0.0", optional = true }
ovr-evm-precompile-sha3fips = { version = "2.0.0", optional = true }
ovr-evm-precompile-modexp = { version = "2.0.0", optional = true }
ovr-evm-precompile-ed25519 = { version = "2.0.0", optional = true }
ovr-evm-precompile-curve25519 = { version = "1.0.1", optional = true }
ovr-evm-precompile-bn128 = { version = "2.0.0", optional = true }
ovr-evm-precompile-blake2 = { version = "2.0.0", optional = true }
ovr-evm-test-vector-support = { version = "1.0.0", optional = true }
ovr-fp-evm = { version = "3.0.0", optional = true }

precompile-utils = { package = "evm-precompiles", version = "0.2.1", optional = true }

[dev-dependencies]
hex-literal = "0.3.1"
serde_json = "1.0"

[features]
default = []
with_common_precompiles = [
    "ovr-evm-precompile-simple",
    "ovr-evm-precompile-sha3fips",
    "ovr-evm-precompile-modexp",
    "ovr-evm-precompile-ed25519",
    "ovr-evm-precompile-curve25519",
    "ovr-evm-precompile-bn128",
    "ovr-evm-precompile-blake2",
    "ovr-evm-test-vector-support",
    "ovr-fp-evm",
]
with_precompile_utils = ["precompile-utils"]
