[package]
name = "eth-utils"
version = "0.3.3"
authors = []
edition = "2021"
license = "MIT"
description = "..."
homepage = "https://github.com/rust-util-collections/eth-utils"
repository = "https://github.com/rust-util-collections/eth-utils.git"
keywords = ["eth", "evm", "ecdsa"]
categories = ["data-structures", "algorithms"]

[dependencies]
ruc = "3.0.0"
rand = "0.8.5"
byteorder = "1.4.3"
serde = { version = "1.0.136", features = ["derive"] }

bip32 = "0.3.0"
bip0039 = "0.10.1"

hex = "0.4.3"
base64 = "0.13.0"

sha3 = "0.10.1"
twox-hash = "1.6.0"
blake2-rfc = "0.2.18"
tiny-keccak = { version = "2.0", features = ["keccak"] }
libsecp256k1 = { version = "0.7.1", features = ["static-context", "hmac"] }
ethereum-types = "0.14.0"

ruc-evm-precompile-simple = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-evm-precompile-sha3fips = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-evm-precompile-modexp = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-evm-precompile-ethpairing = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-evm-precompile-ed25519 = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-evm-precompile-curve25519 = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-evm-precompile-bn128 = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-evm-precompile-blake2 = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-evm-test-vector-support = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }
ruc-fp-evm = { git = "https://github.com/rust-util-collections/frontier", tag = "ruc-v0.0.6", optional = true }

precompile-utils = { package = "evm-precompiles", git = "https://github.com/rust-util-collections/evm-precompiles", tag = "ruc-v0.0.2", optional = true }

[dev-dependencies]
hex-literal = "0.3.1"
serde_json = "1.0"

[features]
default = []
with_common_precompiles = [
    "ruc-evm-precompile-simple",
    "ruc-evm-precompile-sha3fips",
    "ruc-evm-precompile-modexp",
    "ruc-evm-precompile-ethpairing",
    "ruc-evm-precompile-ed25519",
    "ruc-evm-precompile-curve25519",
    "ruc-evm-precompile-bn128",
    "ruc-evm-precompile-blake2",
    "ruc-evm-test-vector-support",
    "ruc-fp-evm",
]
with_precompile_utils = ["precompile-utils"]
